[tool.poetry]
name = "rgerum-utils"
version = "0.1.0"
description = ""
authors = ["rgerum <14153051+rgerum@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "rgerum_utils"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = "^1.24.2"
pandas = "^1.5.3"
matplotlib = "^3.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
coverage = "^7.2.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
